# QtPiDeckCommon

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  QtPiDeckCommon.pro  README.md  qmlCommon.qrc  qtpideckcommon.cpp  qtpideckcommon.h
.github/actions/: common-setup.yml  test.yml
.github/actions/common-setup/: action.yml
.github/actions/init/: action.yml
.github/actions/test/: action.yml
.github/actions/vcpkg-vars/: action.yml
.github/workflows/: clang-tidy.yml  code-coverage.yml  common-lib-workflow.yml  mac-test.yml  macos-test.yml  on-master.yml  pull-request.yml  push-request.yml  qmake.yml  run-tests.yml  set-variables.yml  ubuntu-test.yml  windows-test.yml
GuiApp/: CMakeLists.txt
GuiApp/qml/: app.qml
GuiApp/src/: main.cpp
QmlTestsCommon/: QmlTestsCommon.pro
QmlTestsCommon/include/: TestHelper.hpp
QmlTestsCommon/src/: TestHelper.cpp
QtChecker/: CMakeLists.txt
QtChecker/include/: QtBinding.hpp  QtVersion.hpp
QtDefinitions/: CMakeLists.txt
QtDefinitions/include/: QStringLiteral.hpp  QtDefinitions.hpp  QtPlatform.hpp  QtStyle.hpp
QtPiDeck/components/: Command.qml
QtPiDeckCommon/: CMakeLists.txt  QtPiDeckCommon.pro  icons.qrc  qmlCommon.qrc
QtPiDeckCommon/icons/: generate.sh
QtPiDeckCommon/icons/maintheme/: index.theme
QtPiDeckCommon/include/: Application.hpp  Application.inl  ApplicationExt.inl  Ioc.hpp  QtPiDeckCommon.hpp  QtPiDeckCommon_global.hpp  Utils.hpp
QtPiDeckCommon/include/Bus/: CommonMessageIds.hpp  Message.hpp
QtPiDeckCommon/include/Network/: DeckDataStream.hpp  MessageHeader.hpp  MessageReceiver.hpp  Messages.hpp
QtPiDeckCommon/include/Network/Messages/: HelloMessage.hpp  HelloMessageSerialization.hpp  Message.hpp
QtPiDeckCommon/include/Services/: DeckMessageToBusMessageMapper.hpp  IDeckMessageToBusMessageMapper.hpp  IMessageBus.hpp  IMessageSender.hpp  ISettingsStorage.hpp  ISocketHolder.hpp  Ioc.hpp  MessageBus.hpp  MessageSender.hpp  QmlService.hpp  ServiceInterface.hpp  SocketHolder.hpp  UseServices.hpp
QtPiDeckCommon/include/Utilities/: Connection.hpp  ISerializable.hpp  Literals.hpp  Logging.hpp  MessageHelpers.hpp  MessageTraits.hpp  MessageUtils.hpp  OnExit.hpp  QBAutils.hpp  QStringUtils.hpp  QmlHelper.hpp  QmlHelperDetail.hpp  QmlHelpers.hpp  Traits.hpp  qbautils.hpp
QtPiDeckCommon/include/ViewModels/: CommandViewModel.hpp
QtPiDeckCommon/qmake_modules/: vcpkg.pro
QtPiDeckCommon/qml/components/QtPiDeck/: Command.qml  GroupTitle.qml  PortField.qml  qmldir
QtPiDeckCommon/src/: Application.cpp  QtPiDeckCommon.cpp
QtPiDeckCommon/src/Network/: MessageHeader.cpp  MessageReceiver.cpp
QtPiDeckCommon/src/Network/Messages/: HelloMessage.cpp  HelloMessageSerialization.cpp
QtPiDeckCommon/src/Services/: Ioc.cpp  MessageBus.cpp  MessageSender.cpp  ServiceInterface.cpp
QtPiDeckCommon/src/Utilities/: Logging.cpp
QtPiDeckCommon/src/ViewModels/: CommandViewModel.cpp
QtPiDeckCommonQmlTests/: QtPiDeckCommonQmlTests.pro
QtPiDeckCommonQmlTests/qml/: tst_commandtests.qml
QtPiDeckCommonQmlTests/src/: main.cpp
Tests/: CMakeLists.txt  Tests.pro
Tests/BoostTestWrapper/: CMakeLists.txt
Tests/BoostTestWrapper/include/: BoostUnitTest.hpp
Tests/CodeTestsUtils/: CMakeLists.txt
Tests/CodeTestsUtils/include/: SignalCatcher.hpp
Tests/CodeTestsUtils/src/: SignalCatcher.cpp
Tests/QmlTestsCommon/: CMakeLists.txt
Tests/QmlTestsCommon/include/: TestHelper.hpp  TestSetup.hpp
Tests/QmlTestsCommon/src/: TestHelper.cpp
Tests/QmlTestsUtils/: CMakeLists.txt
Tests/QmlTestsUtils/include/: QmlTreeExplorer.hpp  TestHelper.hpp  TestSetup.hpp
Tests/QmlTestsUtils/src/: QmlTreeExplorer.cpp  TestHelper.cpp
Tests/QtPiDeck/CommandTests/: CMakeLists.txt  main.cpp  tst_commandtests.qml
Tests/QtPiDeck/IocTests/: main.cpp
Tests/QtPiDeck/Network/MessageHeaderTests/: CMakeLists.txt  main.cpp
Tests/QtPiDeck/Services/IocTests/: CMakeLists.txt  main.cpp
Tests/QtPiDeck/Services/MessageBusTests/: main.cpp
Tests/QtPiDeckCommonCodeTests/: CMakeLists.txt  cpp.hint
Tests/QtPiDeckCommonCodeTests/src/: ApplicationTests.cpp  main.cpp  printers.hpp
Tests/QtPiDeckCommonCodeTests/src/Bus/: MessageTests.cpp
Tests/QtPiDeckCommonCodeTests/src/Network/: DeckDataStreamTests.cpp  MessageHeaderTests.cpp  MessageReceiverTests.cpp
Tests/QtPiDeckCommonCodeTests/src/Network/Messages/: HelloMessageSerializationTests.cpp  HelloMessageTests.cpp
Tests/QtPiDeckCommonCodeTests/src/Services/: DeckMessageToBusMessageMapperTests.cpp  IocTests.cpp  MessageBusTests.cpp  MessageSenderTests.cpp
Tests/QtPiDeckCommonCodeTests/src/Utilities/: ConnectionTests.cpp  LiteralTests.cpp  MessageUtilsTests.cpp  OnExitTests.cpp  QBAutilsTests.cpp  QmlHelperTests.cpp
Tests/QtPiDeckCommonCodeTests/src/ViewModels/: CommandViewModelTests.cpp
Tests/QtPiDeckCommonCommandTests/: CMakeLists.txt  QtPiDeckCommonCommandTests.pro
Tests/QtPiDeckCommonCommandTests/qml/: tst_commandtests.qml  tst_commandtests.qmlc
Tests/QtPiDeckCommonCommandTests/src/: main.cpp
Tests/QtPiDeckCommonIocTests/: CMakeLists.txt
Tests/QtPiDeckCommonIocTests/src/: tst_QtPiDeckCommonIocTests.cpp
Tests/Services/: CMakeLists.txt
Tests/Services/QtPiDeckCommonMessageBusTests/: CMakeLists.txt
Tests/Services/QtPiDeckCommonMessageBusTests/src/: tst_QtPiDeckCommonMessageBusTests.cpp
include/: QtPiDeckCommon.hpp  QtPiDeckCommon_global.hpp
network/: messageheader.h
qml/components/: qmldir
scripts/: vcpkgCacheKey.py  vcpkgPackages.py
scripts/vcpkg/: depList.py
vcpkg_manifests/base/: vcpkg.json
