cmake_minimum_required(VERSION 3.14)

project(QtPiDeckCommon LANGUAGES CXX)

if(WIN32)
    set(VCPKG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ext/vcpkg/vcpkg.exe)
    set(VCPKG_BOOTSTRAP_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ext/vcpkg/bootstrap-vcpkg.bat)
else()
    set(VCPKG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ext/vcpkg/vcpkg)
    set(VCPKG_BOOTSTRAP_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ext/vcpkg/bootstrap-vcpkg.sh)
endif()
if(NOT EXISTS ${VCPKG_PATH})
    message(STATUS "Building vcpkg")
    execute_process(COMMAND ${VCPKG_BOOTSTRAP_PATH} OUTPUT_QUIET)
endif()

function(requireHeaderVcpkgModule module hint)
    message(STATUS "Installing " ${module})
    if(WIN32)
        execute_process(COMMAND ${VCPKG_PATH} install --triplet=${TARGET_TRIPLET} ${module} OUTPUT_QUIET)
    else()
        execute_process(COMMAND ${VCPKG_PATH} install --triplet=${TARGET_TRIPLET} ${module} OUTPUT_QUIET)
    endif()
endfunction()

include(CTest)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(QtPiDeckCommon)
add_subdirectory(Tests)
